--- a/internal/server/locales/en/settings.json
+++ b/internal/server/locales/en/settings.json
@@ -26,7 +26,7 @@
 	"Manage your security keys": "Manage your security keys",
 	"Name": "Name",
 	"No": "No",
-	"No Registered Webauthn Credentials": "No Registered Webauthn Credentials",
+	"No Webauthn Credentials have been registered. If you'd like to register one click add.": "No Webauthn Credentials have been registered. If you'd like to register one click add.",
 	"Overview": "Overview",
 	"Provide the details for the new security key": "Provide the details for the new security key",
 	"Register Webauthn Credential": "Register Webauthn Credential",
